functions em javas

--- a/aulaJs/index.html
+++ b/aulaJs/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aula Js</title>
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>    
 </head>
 <body>
-    
+    <button type="button" onclick="clicar()">clique aqui</button>
+    <h3 id="clicar"></h3></p>
+    <p onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse</p>
+    <p onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse</p>
+    <p onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse</p>
 </body>
 </html>
